--- a/packages/wingsuit/apps/drupal/templates/navigation/menu--footer.html.twig
+++ b/packages/wingsuit/apps/drupal/templates/navigation/menu--footer.html.twig
@@ -18,31 +18,4 @@
  *   - in_active_trail: TRUE if the link is in the active trail.
  */
 #}
-{% import _self as menus %}
-
-{#
-  We call a macro which calls itself to render the full tree.
-  @see http://twig.sensiolabs.org/doc/tags/macro.html
-#}
-{{ menus.menu_links(items, attributes, 0) }}
-
-{% macro menu_links(items, attributes, menu_level) %}
-  {% import _self as menus %}
-  {% if items %}
-    {% if menu_level == 0 %}
-      {# These Classes are added from Particle theme #}
-    <ul{{ attributes.addClass('nav', 'pr-2', 'justify-content-end') }}>
-      {% else %}
-      {# These Classes are added from Particle theme #}
-    <ul class="nav pr-2 justify-content-end">
-      {% endif %}
-      {% set menu_items = [] %}
-      {% for item in items %}
-        {% if item not in menu_items %}
-          {% set menu_items = menu_items|merge({(loop.index): {'title': item.title, 'link': item.url.toString()}}) %}
-        {% endif %}
-      {% endfor %}
-      {% include '@molecules/menu/_menu.twig' with {variant: 'footer', items: menu_items} %}
-    </ul>
-  {% endif %}
-{% endmacro %}
+{% include '@molecules/menu/menu.twig' with {variant: 'footer', items: items} %}
