--- a/packages/wingsuit/source/default/patterns/02-molecules/menu/_menu--primary.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/menu/_menu--primary.twig
@@ -1,6 +1,6 @@
 {% set attributes = attributes|default(create_attribute()) %}
 
-<nav class="block lg:flex flex-col bg-gray-xxlight lg:bg-transparent pb-4" role="navigation">
+<nav class="block lg:flex flex-col bg-gray-xlight lg:bg-transparent pb-4" role="navigation">
   <ul {{ attributes.addClass([
     variant == 'primary',
     'block lg:flex flex-col md:flex-row md:items-center',
