--- a/packages/wingsuit/source/default/patterns/03-organisms/footer/footer.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/footer/footer.twig
@@ -1,7 +1,7 @@
 <footer class="bg-primary w-full pt-13 pb-11">
   <div class="max-w-1200 mx-auto px-4 block md:flex justify-between text-center md:text-left">
     <div class="py-6 font-sans text-tiny text-gray-dark">
-      {{ "Gören & Ganoven"|t }}
+      {{ "Wingsuit Flysport"|t }}
     </div>
     <div class="flex">
       {% block menu %}
