--- a/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
@@ -10,8 +10,8 @@
   'button',
   'font-sans',
   'px-4', 'py-2', 'leading-18', 'font-serif', 'uppercase', 'inline-block',
-  variant == 'default' ? 'bg-' ~ color ~ ' border text-white transition-colors duration-150 hover:text-black hover:bg-white hover:border-' ~ color,
-  variant == 'hollow' ? 'bg-white border border-' ~ color ~ ' transition-colors duration-150 text-black hover:text-white hover:bg-' ~ color,
+  variant == 'default' ? 'bg-' ~ color|default('primary') ~ ' border text-white transition-colors duration-150 hover:text-black hover:bg-white hover:border-' ~ color,
+  variant == 'hollow' ? 'bg-white border border-' ~ color ~ ' transition-colors duration-150 text-black hover:text-white hover:bg-' ~ color|default('primary'),
 ] | sort | join(' ') | trim) }}>
 {{ text }}
   {% if svg is not empty %}
