--- a/packages/wingsuit/source/default/patterns/01-atoms/image/_image--bg.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/image/_image--bg.twig
@@ -1,1 +1,1 @@
-<div style="min-height: 400px; background-image: url('{{ file_url(src|default('images/logo.png')) }}'); background-repeat: no-repeat" {{ img_attributes }}></div>
+<div style="min-height: 400px; background-image: url('{{ file_url(src|default('images/logo.png')) }}');" {{ img_attributes.addClass('bg-blue') }}></div>
