--- a/packages/wingsuit/source/default/patterns/03-organisms/grid/grid.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/grid/grid.twig
@@ -1,4 +1,23 @@
-{% set configuration = {
+{#
+/**
+ * @file
+ * Grid component
+ *
+ * See component.wingsuit.yml for usage.
+ */
+#}
+
+{#
+/**
+ * Column configuration:
+ *
+ * Adjust here the behavior of your grid.
+ * 1 key: The column. So 1 for 1 column grids, 2 for 2 column grids and so on.
+ * 2 key: The css classes of the provided key: So 1 are classes of the first colmn.
+          If every column has the same classes use "default" as key.
+ */
+#}
+{% set column_configuration = {
   1:
   {
     equal: {default: 'w-full'},
@@ -20,69 +39,58 @@
     equal: {default: 'flex flex-col w-full sm:w-1/2 md:w-1/5 mb-20 last:mb-0 md:mb-0'},
   }
 } %}
-{% set gap_sizes = {
+
+{#
+/**
+ * Gap configuration:
+ *
+ * Adjust here the gap between the colums.
+ */
+#}
+{% set gap_configuration = {
   none: '',
   default: 'px-6 md:px-25',
   large: 'px-10 md:px-35'
 } %}
 
-{% set gap_negative_sizes = {
+{% set gap_configuration_negative_sizes = {
   none: '',
   default: '-mx-6 -md:mx-25',
   large: '-mx-10 -md:mx-35'
 } %}
 
-{% set gap = gap|default('default') %}
+{#
+/**
+ * Configuration ends here.
+ *
+ * Propably you don't need to adjust this.
+ */
+#}
+
+{% set gap_configuration = gap_configuration|default('default') %}
 {% set config = _context['config_' ~ columns|default('2') ] %}
-{% set current_configuration = configuration[columns][config] %}
+{% set current_configuration = column_configuration[columns][config] %}
 
 {% if current_configuration is not empty %}
-  {% set wrapper__classes = [
-    bg,
-    padding_top == 'half' ? 'pt-10 md:pt-20' : '',
-    padding_top == 'default' ? 'pt-20 md:pt-40' : '',
-    padding_top == 'doubled' ? 'pt-40 md:pt-80' : '',
-    padding_top == 'xlarge' ? 'pt-40' : '',
-    padding_top == 'large' ? 'md:pt-30 pt-20' : '',
-    padding_top == 'medium' ? 'pt-20' : '',
-    padding_top == 'small' ? 'pt-10' : '',
-    padding_bottom == 'default' ? 'pb-20 md:pb-40' : '',
-    padding_bottom == 'xlarge' ? 'pb-40' : '',
-    padding_bottom == 'large' ? 'md:pb-30 pb-20' : '',
-    padding_bottom == 'medium' ? 'pb-20' : '',
-    padding_bottom == 'small' ? 'pb-10' : ''
-  ] | sort | join(' ') | trim %}
 
-  {% set grid__classes = [
-    gap_negative_sizes[gap],
-    'flex flex-wrap',
-  ] | sort | join(' ') | trim %}
-  {% set container__classes = [
-    width == 'large' ? 'max-w-1600': '',
-    width == 'default' ? 'max-w-1200': '',
-    'mx-auto'
-  ] | sort | join(' ') | trim %}
-
-  {% set attributes = attributes|default(create_attribute()).addClass(grid__classes) %}
-  {% set wrapper__attributes = wrapper__attributes|default(create_attribute()).addClass(wrapper__classes) %}
-  {#The number of columns is set here #}
+  {# The number of columns is set here #}
   {%- set column_1 -%}{%- block column_1 -%}{{ _context['column_1' ] }}{% endblock %}{% endset %}
   {%- set column_2 -%}{%- block column_2 -%}{{ _context['column_2' ] }}{% endblock %}{% endset %}
   {%- set column_3 -%}{%- block column_3 -%}{{ _context['column_3' ] }}{% endblock %}{% endset %}
   {%- set column_4 -%}{%- block column_4 -%}{{ _context['column_4' ] }}{% endblock %}{% endset %}
   {%- set column_5 -%}{%- block column_5 -%}{{ _context['column_5' ] }}{% endblock %}{% endset %}
-  {% set wrappers_count = wrapper__attributes|length %}
-{% if wrappers_count != 0 %}
-  <div {{ wrapper__attributes }}>
-{% endif %}
-  <div class="{{ container__classes }}">
-  <div {{ attributes }}>
+
+  <div {{ attributes|default(create_attribute()).addClass(
+    [
+    gap_negative_sizes[gap],
+    'flex flex-wrap'
+  ] | sort | join(' ') | trim) }}>
     {% block columns %}
       {%- for i in 1..columns -%}
         {% block column %}
           {% set column_classes = current_configuration[i] is not empty ? current_configuration[i] : current_configuration['default'] %}
           {% if gap != '' %}
-            {% set column_classes = column_classes ~ ' ' ~ gap_sizes[gap] %}
+            {% set column_classes = column_classes ~ ' ' ~ gap_configuration[gap] %}
           {% endif %}
           <div class="{{ column_classes }}">
             {{ _context['column_' ~ i ] }}
@@ -92,9 +100,6 @@
     {% endblock %}
   </div>
   </div>
-{% if wrappers_count != 0 %}
-  </div>
-{% endif %}
 {% else %}
   No configuration found for "{{ columns }}/{{ config }}".
 {% endif %}
