Fix pattern generate issues.

--- a/packages/cli/src/generators/component/templates/ds/base/index.js.ejs
+++ b/packages/cli/src/generators/component/templates/ds/base/index.js.ejs
@@ -1,6 +1,6 @@
 /**
  * <%= name %>
  */
-<% if (useCss) { %>import './_<%= name %>.css';<% } %><% if (useJs) { %>
-import './_<%= name %>.behavior.js';
+<% if (useCss) { %>import './<%= name %>.css';<% } %><% if (useJs) { %>
+import './<%= name %>.behavior';
 <% } %>
