--- a/packages/cli/src/generators/component/templates/ds/js/pattern.behavior.js.ejs
+++ b/packages/cli/src/generators/component/templates/ds/js/pattern.behavior.js.ejs
@@ -1,4 +1,4 @@
-Drupal.behaviors.<%= name %> = {
+Drupal.behaviors.<%= cleanPatternType %> = {
   attach(context) {
     console.log('Attach pattern <%= name %>');
   },
