--- a/packages/cli/src/generators/component/templates/ds/plain_only/pattern.stories.js.ejs
+++ b/packages/cli/src/generators/component/templates/ds/plain_only/pattern.stories.js.ejs
@@ -1,5 +1,6 @@
 import React from 'react';
 import { RenderTwig } from '@wingsuit-designsystem/storybook';<% if (useDoc == 'mdx') { %>
+import './index';
 import mdx from './<%= name %>.mdx';
 <% } %>
 
