--- a/packages/cli/src/generators/component/templates/ds/wingsuit/pattern.twig.ejs
+++ b/packages/cli/src/generators/component/templates/ds/wingsuit/pattern.twig.ejs
@@ -3,7 +3,7 @@
  * @file
  * <%= name %>
  *
- * See _<%= name %>.wingsuit.yaml for documentation.
+ * See <%= name %>.wingsuit.yaml for documentation.
  */
 #}
 
