--- a/packages/cli/src/generators/component/templates/ds/wingsuit/pattern.wingsuit.yml.ejs
+++ b/packages/cli/src/generators/component/templates/ds/wingsuit/pattern.wingsuit.yml.ejs
@@ -1,6 +1,6 @@
 <%= underscoreName %>:
   use: "@<%= cleanPatternType %>/<%= name %>/<%= name %>.twig"
-  label: <%= name %>
+  label: <%= capitalizeName %>
   description: Example description
   <% if (componentType == 'wingsuit_presenter') { %>
   visible: index
