--- a/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
@@ -1,16 +1,16 @@
-<header class="z-50 h-20 fixed w-full bg-green border-b lg:border-b-0 border-gray-xlight flex top-0" role="navigation"
+<header class="z-50 sticky w-full bg-green border-b lg:border-b-0 border-gray-xlight top-0" role="navigation"
      x-data="{ open: false }">
 
-  {% embed "@organims/container/container.twig" %}
+  {% embed "@organisms/container/container.twig" %}
   {% block content %}
-  <div class="relative justify-between flex flex-wrap md:flex-no-wrap items-center">
+  <div class="h-20 justify-between flex flex-wrap md:flex-no-wrap items-center">
     <a href="{{ path('<front>') }}" class="mr-4 w-155">
       {% include "@atoms/svg/_svg--icon.twig" with {
         size: 'w-16 h-16',
         icon: 'logo'
       } %}
     </a>
-    <div class="burger flex align-right mr-6 items-center lg:hidden cursor-pointer"
+    <div class="burger align-right mr-6 items-center lg:hidden cursor-pointer"
          @click="open = !open">
       {% include '@atoms/hamburger/hamburger.twig' %}
     </div>
@@ -22,4 +22,6 @@
       {% endblock %}
     </div>
   </div>
+  {% endblock %}
+  {% endembed %}
 </header>
