--- a/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
@@ -1,27 +1,42 @@
-<header class="z-50 sticky w-full bg-green border-b lg:border-b-0 border-gray-xlight top-0" role="navigation"
-     x-data="{ open: false }">
+<div class="leading-normal tracking-normal text-white gradient">
+  <header class="fixed w-full z-30 top-0 text-white">
 
-  {% embed "@organisms/container/container.twig" %}
-  {% block content %}
-  <div class="h-20 justify-between flex flex-wrap md:flex-no-wrap items-center">
-    <a href="{{ path('<front>') }}" class="mr-4 w-155">
-      {% include "@atoms/svg/_svg--icon.twig" with {
-        size: 'w-16 h-16',
-        icon: 'logo'
-      } %}
-    </a>
-    <div class="burger align-right mr-6 items-center lg:hidden cursor-pointer"
-         @click="open = !open">
-      {% include '@atoms/hamburger/hamburger.twig' %}
+    <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
+
+      <div class="pl-4 flex items-center">
+        <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
+          <!--Icon from: http://www.potlabicons.com/ -->
+          <svg class="h-8 fill-current inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512.005 512.005">
+            <rect fill="#2a2a31" x="16.539" y="425.626" width="479.767" height="50.502"
+                  transform="matrix(1,0,0,1,0,0)"></rect>
+            <path class="plane-take-off"
+                  d=" M 510.7 189.151 C 505.271 168.95 484.565 156.956 464.365 162.385 L 330.156 198.367 L 155.924 35.878 L 107.19 49.008 L 211.729 230.183 L 86.232 263.767 L 36.614 224.754 L 0 234.603 L 45.957 314.27 L 65.274 347.727 L 105.802 336.869 L 240.011 300.886 L 349.726 271.469 L 483.935 235.486 C 504.134 230.057 516.129 209.352 510.7 189.151 Z "></path>
+          </svg>
+          LANDING
+        </a>
+      </div>
+
+      <div class="block lg:hidden pr-4">
+        <button id="nav-toggle"
+                class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-600 hover:text-gray-800 hover:border-teal-500 appearance-none focus:outline-none">
+          <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title>
+            <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
+          </svg>
+        </button>
+      </div>
+
+      <div
+        class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20"
+        id="nav-content">
+        {% block menu %}
+          {{ menu }}
+        {% endblock %}
+        <button id="navAction"
+                class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75">
+          Action
+        </button>
+      </div>
     </div>
-    <div
-      class="w-full justify-end lg:flex top-0 absolute lg:relative -ml-6 lg:ml-0 mt-20 lg:mt-0 lg:block lg:w-auto lg:flex-grow lg:items-center"
-      :class="{'block': open, 'hidden': !open}">
-      {% block menu %}
-        {{ menu }}
-      {% endblock %}
-    </div>
-  </div>
-  {% endblock %}
-  {% endembed %}
-</header>
+    <hr class="border-b border-gray-100 opacity-25 my-0 py-0">
+  </header>
+</div>
