--- a/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
@@ -1,24 +1,21 @@
 {% set tag_name = tag_name|default('div') %}
 {% set attributes = attributes|default(create_attribute()) %}
 {% set svg_size = svg_size|default('default') %}
+
 {% if url is not empty %}
   {% set attributes = attributes.setAttribute('href', url) %}
   {% set tag_name = 'a' %}
 {% endif %}
 
 <{{ tag_name }} {{ attributes.addClass([
-  'button',
-  'font-sans',
-  'px-4', 'py-2', 'leading-18', 'font-serif', 'uppercase', 'inline-block',
-  variant == 'default' ? 'bg-' ~ color|default('primary') ~ ' border text-white transition-colors duration-150 hover:text-black hover:bg-white hover:border-' ~ color,
-  variant == 'hollow' ? 'bg-white border border-' ~ color ~ ' transition-colors duration-150 text-black hover:text-white hover:bg-' ~ color|default('primary'),
+  variant == 'default' ? ' mx-auto lg:mx-0 hover:underline text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg',
+  variant == 'hollow' ? ' mx-auto lg:mx-0 hover:underline text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg',
 ] | sort | join(' ') | trim) }}>
 {{ text }}
   {% if svg is not empty %}
     {% include "@atoms/svg/_svg--icon.twig" with {
       icon: svg,
       size: size,
-      svg_classes: ['inline-block', 'align-middle', content|striptags ? 'ml-15', variant == 'outline' ? 'fill-red' : 'fill-white']
     } %}
   {% endif %}
 </{{ tag_name }}>
