--- a/packages/wingsuit/source/default/patterns/02-molecules/menu/_menu--primary.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/menu/_menu--primary.twig
@@ -1,16 +1,15 @@
 {% set attributes = attributes|default(create_attribute()) %}
-
-<nav class="block lg:flex flex-col bg-gray-xlight lg:bg-transparent" role="navigation">
-  <ul {{ attributes.addClass([
-    variant == 'primary',
-    'block lg:flex flex-col md:flex-row md:items-center',
-  ] | sort | join(' ') | trim) }}>
+<nav>
+  <ul class="list-reset lg:flex justify-end flex-1 items-center">
     {% for item in items %}
-      <li class="font-sans px-4 pt-4 lg:p-2 lg:px-4 lg:border-b-0 border-b-0 uppercase lg:text-center text-black">
-        <a class="hover:border-b text-base {% if (item.in_active_trail) %}is-active{% endif %}" href="{{ item.url }}">
-           {{ item.title }}
+      <li class="mr-3">
+        <a
+          class="inline-block py-2 px-4 text-black font-bold no-underline {% if (item.in_active_trail) %}no-underline {% else %} hover:text-gray-800 hover:text-underline py-2 px-4{% endif %}"
+          href="{{ item.url }}">
+          {{ item.title }}
         </a>
       </li>
     {% endfor %}
   </ul>
 </nav>
+
