Add hero pattern.

--- a/packages/wingsuit/apps/storybook/patterns/05-pages/homepage/homepage.twig
+++ b/packages/wingsuit/apps/storybook/patterns/05-pages/homepage/homepage.twig
@@ -4,6 +4,7 @@
   footer_menu: pattern_preview('menu', 'footer')
 } %}
   {% block main %}
+    {{ pattern_preview('hero') }}
     {% embed "@organisms/container/container.twig"%}
       {% block content %}
         <div class="text-center w-1/2 m-auto pb-8 text-gray-dark pt-8">
