Refactor image component.

--- a/packages/wingsuit/apps/storybook/patterns/05-pages/article/article.twig
+++ b/packages/wingsuit/apps/storybook/patterns/05-pages/article/article.twig
@@ -21,7 +21,7 @@
     {% include '@templates/article/article.twig' with {
       headline: 'Headline',
       text: 'Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.',
-      image: pattern_preview('image', 'primary'),
+      image: pattern_preview('image', 'placeholder_image'),
       button: pattern_preview('button', 'default'),
       more: more
 
