--- a/packages/wingsuit/source/default/patterns/02-molecules/card/card.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/card/card.twig
@@ -19,6 +19,7 @@
 
   <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
     <a href="#" class="flex flex-wrap no-underline hover:no-underline">
+      {{ image }}
       <p class="w-full text-gray-600 text-xs md:text-sm px-6">
         {% block preheadline %}
           {{ preheadline }}
