--- a/packages/wingsuit/source/default/patterns/01-atoms/image/image.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/image/image.twig
@@ -1,18 +1,40 @@
-{% set img_attributes = create_attribute().addClass([
-  size != '' ? size,
-] | sort | join(' ') | trim
-  ) %}
-{%- set image -%}
-{% if placeholder == true %}
-{%- include '@atoms/image/_image--placeholder.twig' -%}
-{% else %}
-{{- image -}}
-{%- endif -%}
-{%- endset -%}
+{#
+/**
+ * @file
+ * Image component.
+ *
+ * Image component for images and background images.
+ *
+ * Use variant placeholder or placeholder_background for prototyping.
+ */
+#}
 
-{% if variant == 'primary' %}
-  {% include '@atoms/image/_image--primary.twig' %}
-{% elseif variant == 'bg' %}
-  {% include '@atoms/image/_image--bg.twig' %}
+{% set variant = variant|default('image') %}
+{% set placeholder_url = placeholder_url|default('https://satyr.io/') %}
+
+{% if variant == 'image' %}
+  {%- set image -%}
+    {% if url is not empty %}
+      <img {{ img_attributes }} src="{{ file_url(url) }}" alt="{{ alt }}"/>
+    {% else %}
+      {{- image -}}
+    {%- endif -%}
+  {% endset %}
+  {% include '@atoms/image/_image--image.twig' with { image: image, caption: caption } only %}
+{% elseif variant == 'background' %}
+  {% include '@atoms/image/_image--background.twig' with {url: url, background_style: background_style } only %}
+{% elseif variant == 'placeholder_image' %}
+  {%- set image -%}
+    {% import '@atoms/image/_placeholder-macro.twig' as placeholder %}
+    {{ placeholder.image(style, imageConfig, placeholder_url) }}
+  {% endset %}
+  {% include '@atoms/image/_image--image.twig' with { image: image, caption: caption } only %}
+{% elseif variant == 'placeholder_background' %}
+  {% import '@atoms/image/_placeholder-macro.twig' as placeholder %}
+  {% set image_styles = imageConfig.styles %}
+  {% set url %}
+    {{ placeholder.get_placeholder_url(image_styles[style], placeholder_url) }}
+  {% endset %}
+  {% include '@atoms/image/_image--background.twig' with { url: url, background_style: background_style } only %}
 {% endif %}
 
