--- a/packages/wingsuit/source/default/patterns/01-atoms/svg/svg.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/svg/svg.twig
@@ -1,3 +1,4 @@
+{% set variant = variant|default('icon') %}
 {% if variant == 'icon' %}
   {% include "@atoms/svg/_svg--icon.twig" %}
 {% elseif variant == 'inline-css' %}
