--- a/packages/wingsuit/source/default/patterns/02-molecules/hero/hero.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/hero/hero.twig
@@ -6,7 +6,7 @@
  * See hero.wingsuit.yaml for documentation.
  */
 #}
-<div style="background: linear-gradient(90deg, #d53369 0%, #daae51 100%);">
+<div style="background: linear-gradient(90deg, #d53369 0%, #daae51 100%);" class="text-white">
   <div class="pt-24">
 
     <div class="container px-3 mx-auto flex flex-wrap flex-col md:flex-row items-center">
@@ -15,18 +15,12 @@
         <p class="uppercase tracking-loose w-full">{{ pre_headline }}</p>
         <h1 class="my-4 text-5xl font-bold leading-tight">{{ headline }}</h1>
         <p class="leading-normal text-2xl mb-8">{{ text }}</p>
-
         {{ button }}
-
-
       </div>
-      <!--Right Col-->
       <div class="w-full md:w-3/5 py-6 text-center">
         {{ image }}
       </div>
-
     </div>
-
   </div>
   <div class="relative -mt-12 lg:-mt-24">
     <svg viewBox="0 0 1428 174" version="1.1" xmlns="http://www.w3.org/2000/svg"
