Finalize template refactor.

--- a/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
@@ -9,6 +9,8 @@
 
 <{{ tag_name }} {{ attributes.addClass([
   'mx-auto lg:mx-0 hover:underline text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg transistion transition-colors duration-200',
+  variant == 'default' ? 'bg-' ~ color  ~ '-500',
+  variant == 'hollow' ? 'border border-' ~ color ~ '-500',
 ] | sort | join(' ') | trim) }}>
 {{ text }}
   {% if svg is not empty %}
