--- a/packages/wingsuit/source/default/patterns/03-organisms/container/container.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/container/container.twig
@@ -20,12 +20,15 @@
     [
       padding_x == 'default' ? 'px-6',
       padding_x == 'large' ? 'px-10',
-      padding_top == 'default' ? 'pt-20 md:pt-40',
-      padding_top == 'large' ? 'md:pt-30 pt-20',
-      padding_top == 'small' ? 'pt-10',
-      padding_bottom == 'default' ? 'pb-20 md:pb-40',
-      padding_bottom == 'large' ? 'md:pb-30 pb-20',
-      padding_bottom == 'small' ? 'pb-10',
+
+      padding_top == 'small' ? 'pt-4',
+      padding_top == 'default' ? 'pt-10 md:pt-20',
+      padding_top == 'large' ? 'pt-20 md:pt-30',
+
+      padding_bottom == 'small' ? 'pb-4',
+      padding_bottom == 'default' ? 'pt-10 md:pt-20',
+      padding_bottom == 'large' ? 'pt-20 md:pt-30',
+
       width == 'small' ? 'max-w-800',
       width == 'default' ? 'max-w-1200',
       width == 'large' ? 'max-w-1600',
