--- a/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
@@ -2,38 +2,42 @@
   <header class="fixed w-full z-30 top-0 text-white"
           x-bind:class="{ 'bg-white shadow': isScrollDown}">
 
-    <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
+    {% embed "@organisms/container/container.twig"%}
+      {% block content %}
+        <div class="flex flex-wrap items-center justify-between mt-0 py-2">
 
-      <div class="pl-4 flex items-center">
-        <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
-          <!--Icon from: http://www.potlabicons.com/ -->
-          <div class="max-w-120">
-            {% include "@atoms/image/image.twig" with {"url": "ws-assets://images/logo.svg"} only %}
+          <div class="flex items-center">
+            <a class="text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
+              <!--Icon from: http://www.potlabicons.com/ -->
+              <div class="max-w-120">
+                {% include "@atoms/image/image.twig" with {"url": "ws-assets://images/logo.svg"} only %}
+              </div>
+            </a>
           </div>
-        </a>
-      </div>
 
-      <div class="block lg:hidden pr-4">
-        <button id="nav-toggle"
-                class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-600 hover:text-gray-800 hover:border-teal-500 appearance-none focus:outline-none">
-          <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title>
-            <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
-          </svg>
-        </button>
-      </div>
+          <div class="block lg:hidden pr-4">
+            <button id="nav-toggle"
+                    class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-600 hover:text-gray-800 hover:border-teal-500 appearance-none focus:outline-none">
+              <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title>
+                <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
+              </svg>
+            </button>
+          </div>
 
-      <div
-        class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20"
-        id="nav-content">
-        {% block menu %}
-          {{ menu }}
-        {% endblock %}
-        <button id="navAction"
-                class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75">
-          Action
-        </button>
-      </div>
-    </div>
+          <div
+            class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20"
+            id="nav-content">
+              {{ menu }}
+
+            <button id="navAction"
+                    class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75">
+              Action
+            </button>
+          </div>
+        </div>
+
+      {% endblock %}
+    {% endembed %}
     <hr class="border-b border-gray-100 opacity-25 my-0 py-0">
   </header>
 </div>
