--- a/packages/wingsuit/apps/storybook/patterns/05-pages/article/article.twig
+++ b/packages/wingsuit/apps/storybook/patterns/05-pages/article/article.twig
@@ -1,12 +1,15 @@
 {% embed "@templates/site-container.twig"
   with {
   primary_menu: pattern_preview('menu', 'primary'),
-  footer_menu: pattern_preview('menu', 'footer')
+  footer_menu_1: pattern_preview('menu', 'footer'),
+  footer_menu_2: pattern_preview('menu', 'footer'),
+  footer_menu_3: pattern_preview('menu', 'footer'),
+  footer_menu_4: pattern_preview('menu', 'footer')
 
 } %}
   {% block main %}
     {% set more %}
-      {% embed '@organisms/grid/grid.twig' with {config_3: 'equal', columns: 3, gap: 'default'} %}
+      {% embed '@organisms/grid/grid.twig' with {config: 'equal', columns: 3, gap: 'default'} %}
         {% block column_1 %}
           {{ pattern_preview('card') }}
         {% endblock %}
@@ -18,13 +21,6 @@
         {% endblock %}
       {% endembed %}
     {% endset %}
-    {% include '@templates/article/article.twig' with {
-      headline: 'Headline',
-      text: 'Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.',
-      image: pattern_preview('image', 'placeholder_image'),
-      button: pattern_preview('button', 'default'),
-      more: more
-
-    } %}
+    {{ pattern_preview('article', '', {more: more}) }}
   {% endblock %}
 {% endembed %}
