--- a/packages/wingsuit/apps/storybook/patterns/05-pages/homepage/homepage.twig
+++ b/packages/wingsuit/apps/storybook/patterns/05-pages/homepage/homepage.twig
@@ -1,26 +1,22 @@
 {% embed "@templates/site-container.twig"
   with {
   primary_menu: pattern_preview('menu', 'primary'),
-  footer_menu: pattern_preview('menu', 'footer')
+  footer_menu_1: pattern_preview('menu', 'footer'),
+  footer_menu_2: pattern_preview('menu', 'footer'),
+  footer_menu_3: pattern_preview('menu', 'footer'),
+  footer_menu_4: pattern_preview('menu', 'footer')
 } %}
   {% block main %}
     {{ pattern_preview('hero') }}
-    {% embed "@organisms/container/container.twig"%}
-      {% block content %}
-        <div class="text-center w-1/2 m-auto pb-8 text-gray-dark pt-8">
-          {{ "Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups." }}
-        </div>
-        {% embed '@organisms/grid/grid.twig' with {config_3: 'equal', columns: 3, gap: 'default'} %}
-          {% block column_1 %}
-            {{ pattern_preview('card') }}
-          {% endblock %}
-          {% block column_2 %}
-            {{ pattern_preview('card') }}
-          {% endblock %}
-          {% block column_3 %}
-            {{ pattern_preview('card') }}
-          {% endblock %}
-        {% endembed %}
+    {% embed "@organisms/section/section.twig" with { columns: 3, headline: "Section title"}%}
+      {% block column_1 %}
+        {{ pattern_preview('card') }}
+      {% endblock %}
+      {% block column_2 %}
+        {{ pattern_preview('card') }}
+      {% endblock %}
+      {% block column_3 %}
+        {{ pattern_preview('card') }}
       {% endblock %}
     {% endembed %}
   {% endblock %}
