--- a/packages/wingsuit/source/default/patterns/01-atoms/headline/headline.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/headline/headline.twig
@@ -1,10 +1,12 @@
 {% set attributes = attributes|default(create_attribute()) %}
 {% set element = element|default('div') %}
+{% set size = size|default('large') %}
 
 <{{ element }} {{ attributes.addClass([
   'headline',
-  size == 'large' ? 'text-36',
-  size == 'medium' ? 'text-28',
+  'font-serif',
+  size == 'large' ? 'text-4xl',
+  size == 'medium' ? 'text-xl',
 ] | sort | join(' ') | trim) }}>
 {{ title_prefix }}
   {{ title_suffix }}
