--- a/packages/wingsuit/source/default/patterns/02-molecules/card/card.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/card/card.twig
@@ -12,33 +12,33 @@
 
 
 <{{ element }} {{ attributes.addClass([
-  alignment == 'center'?'text-center': '',
-  'w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink',
+  alignment == 'center' ? 'text-center': '',
+  'w-full flex flex-col flex-grow flex-shrink',
 ] | sort | join(' ') | trim) }}>
 
 
   <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
-    <a href="#" class="flex flex-wrap no-underline hover:no-underline">
       {{ image }}
-      <p class="w-full text-gray-600 text-xs md:text-sm px-6">
+      <div class="pt-4">
+      <div class="w-full text-gray-600 text-xs md:text-sm px-6">
         {% block preheadline %}
           {{ preheadline }}
         {% endblock %}
-      </p>
-      <h2 class="w-full font-bold text-xl text-gray-800 px-6">
+      </div>
+      <h2 class="w-full font-bold text-3xl text-gray-800 px-6 font-serif">
         {% block headline %}
           {{ headline }}
         {% endblock %}</h2>
-      <p class="text-gray-800 text-base px-6 mb-5">
+      <div class="text-gray-800 text-base px-6 mb-5">
         {% block text %}
           {{ text }}
         {% endblock %}
-      </p>
-    </a>
+      </div>
+      </div>
   </div>
   <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
     <div class="flex items-center justify-start">
-      {% include '@atoms/button/button.twig' with {variant: 'primary', content: button} only %}
+      {% include '@atoms/button/button.twig' with { variant: 'primary', text: "Read more", color: "orange" } only %}
     </div>
   </div>
 </{{ element }}>
