--- a/packages/wingsuit/source/default/patterns/03-organisms/section/section.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/section/section.twig
@@ -7,8 +7,23 @@
  */
 #}
 
-{% embed "@organisms/container/container.twig" with { attributes: attributes }%}
+{%- set headline -%}{%- block headline -%}{{ headline }}{% endblock %}{% endset %}
+{% set padding_top = padding_top|default('default') %}
+
+{% set grid %}
+  {%- set column_1 -%}{%- block column_1 -%}{{ _context['column_1' ] }}{% endblock %}{% endset %}
+  {%- set column_2 -%}{%- block column_2 -%}{{ _context['column_2' ] }}{% endblock %}{% endset %}
+  {%- set column_3 -%}{%- block column_3 -%}{{ _context['column_3' ] }}{% endblock %}{% endset %}
+  {%- set column_4 -%}{%- block column_4 -%}{{ _context['column_4' ] }}{% endblock %}{% endset %}
+  {%- set column_5 -%}{%- block column_5 -%}{{ _context['column_5' ] }}{% endblock %}{% endset %}
+  {% include "@organisms/grid/grid.twig" with {attributes: create_attribute() } %}
+{% endset %}
+
+{% embed "@organisms/container/container.twig" with { attributes: attributes, content: grid, padding_top: padding_top }%}
   {% block content %}
-    {% include "@organisms/grid/grid.twig" with {attributes: create_attribute() }%}
+  {% if headline is not empty %}
+    <h2 class="pb-6 font-serif w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">{{ headline }}</h2>
+  {% endif %}
+  {{ content }}
   {% endblock %}
 {% endembed %}
