--- a/packages/wingsuit/source/default/patterns/04-templates/article/article.twig
+++ b/packages/wingsuit/source/default/patterns/04-templates/article/article.twig
@@ -1,7 +1,9 @@
-
-{% set content %}
+{% embed "@organisms/container/container.twig" with { padding_top: 'large' } %}
+  {% block content %}
   <div class="text-center w-1/2 m-auto pb-8 text-gray-dark pt-10">
-    {{ text }}
+    {% include "@atoms/headline/headline.twig" with {
+      content: headline
+    } only %}
   </div>
   <div class="block md:flex group hover:no-underline pt-10">
     <div class="w-full md:w-1/2">
@@ -10,11 +12,6 @@
       {% endblock %}
     </div>
     <div class="w-full md:w-1/2 md:pl-4">
-      <div class="font-serif text-28 text-blue group-hover:underline">
-        {% block headline %}
-          {{ headline }}
-        {% endblock %}
-      </div>
       <div class="text-base mb-10 text-gray-dark font-sans">
         {% block text %}
           {{ text }}
@@ -32,7 +29,6 @@
       {{ more }}
     {% endblock %}
   </div>
-{% endset %}
-{% embed "@organisms/container/container.twig" with {content: content}%}
+  {% endblock %}
 {% endembed %}
 
