Add alert pattern.

--- a/packages/wingsuit/source/default/patterns/01-atoms/alert/alert.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/alert/alert.twig
@@ -6,9 +6,31 @@
  * See _alert.wingsuit.yaml for documentation.
  */
 #}
-
-<div {{
-  attributes|default(create_attribute())}}>
-  <div class="bg-gray-medium p-2">{% block header %}{{ header }}{% endblock %}</div>
-  <div class="bg-gray-light p-2">{% block content %}{{ content }}{% endblock %}</div>
+  <div {{ create_attribute().addClass(
+    [
+    "p-5 w-full border-l-4",
+    variant == 'status' ? "bg-green-100 border-green-500 text-green-700",
+    variant == 'error' ? "bg-red-100 border-red-500 text-red-700",
+    variant == 'warning' ? "bg-orange-100 border-orange-500 text-orange-700"
+    ]|sort|join(' ')
+  ) }}>
+  <div class="flex space-x-3">
+    <div class="flex-none">
+    {% include "@atoms/svg/svg.twig" with {
+      "icon": "alert--" ~ variant,
+      "size": "w-6 h-6",
+      "fill-current": true
+    } only %}
+    </div>
+    <div class="leading-tight flex flex-col space-y-2">
+      <div class="font-bold">
+        {% block header %}{{ header }}{% endblock %}
+      </div>
+      <div class="flex-1 leading-snug text-sm ">
+        {% block content %}
+          {{ content }}
+        {% endblock %}
+      </div>
+    </div>
+  </div>
 </div>
