Add accordion item.

--- a/packages/wingsuit/source/default/patterns/01-atoms/alert/alert.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/alert/alert.twig
@@ -18,8 +18,7 @@
     <div class="flex-none">
     {% include "@atoms/svg/svg.twig" with {
       "icon": "alert--" ~ variant,
-      "size": "w-6 h-6",
-      "fill-current": true
+      "size": "w-6 h-6"
     } only %}
     </div>
     <div class="leading-tight flex flex-col space-y-2">
