--- a/packages/wingsuit/source/default/patterns/01-atoms/accordion-item/accordion-item.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/accordion-item/accordion-item.twig
@@ -9,8 +9,8 @@
 {% set id = uuid() %}
 <div class="tab w-full overflow-hidden border-t" data-children-count="1">
   <input class="absolute opacity-0 " id="{{ id }}" type="checkbox" name="tabs">
-  <label class="block p-5 leading-normal cursor-pointer" for="{{ id }}">{{ headline }}</label>
+  <label class="block p-5 leading-normal cursor-pointer" for="{{ id }}">{{ label }}</label>
   <div class="tab-content overflow-hidden border-l-2 bg-grey-lightest border-indigo leading-normal">
-    <div class="p-5">{{ text }}</div>
+    <div class="p-5">{{ content }}</div>
   </div>
 </div>
