--- a/packages/wingsuit/source/default/patterns/01-atoms/forms/_textarea.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/forms/_textarea.twig
@@ -15,8 +15,8 @@
 #}
 {%
   set classes = [
-    'form-item__textfield',
-    'form-item__textarea',
+    'form-textarea',
+    'w-full'
   ]
 %}
 <div{{ wrapper_attributes }}>
