--- a/packages/wingsuit/source/default/patterns/01-atoms/forms/_checkboxes.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/forms/_checkboxes.twig
@@ -12,4 +12,4 @@
  @todo: remove this file once https://www.drupal.org/node/1819284 is resolved.
  This is identical to core/modules/system/templates/container.html.twig
 #}
-<div{{ attributes.addClass('form-item--checkboxes') }}>{{ children }}</div>
+<div{{ attributes }}>{{ children }}</div>
