--- a/packages/wingsuit/source/default/patterns/01-atoms/hamburger/hamburger.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/hamburger/hamburger.twig
@@ -1,1 +1,1 @@
-<div class="ui-hamburger-02" :class="{'is-active': open}"></div>
+<div class="ui-hamburger-02" :class="{'is-active': menuIsOpen}" x-on:click="menuIsOpen = !menuIsOpen"></div>
