--- a/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
@@ -16,17 +16,14 @@
           </div>
 
           <div class="block lg:hidden pr-4">
-            <button id="nav-toggle"
-                    class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-600 hover:text-gray-800 hover:border-teal-500 appearance-none focus:outline-none">
-              <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title>
-                <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
-              </svg>
-            </button>
+            {% include "@atoms/hamburger/hamburger.twig" only %}
           </div>
 
           <div
             class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20"
-            id="nav-content">
+            id="nav-content"
+            :class="{'block -mx-6': menuIsOpen, 'hidden': !menuIsOpen}"
+          >
               {{ menu }}
 
             <button id="navAction"
